--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>project1</title>
+    <title>ProjectName</title>
   </head>
   <body>
     <div id="app"></div>
